--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,16 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+	
+
 		{
 			"name": "Launch",
 			"type": "go",
 			"request": "launch",
 			"mode": "auto",
-			"program": "${fileDirname}",
+			// "program": "/home/ken/gostuff/src/github.com/graynerd/mwlog/",
+			"program":"${workspaceFolder}",
+			"cwd": "${workspaceFolder}",
 			"env": {},
 			"args": []
 		}
