--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
 			"cwd": "${workspaceFolder}",
 			"env": {},
 			"args": [],
-			"showLog": true
+			"showLog": true,
+			"output": "stderr"
 		}
 	]
 }
