added ability to log station directly from mw list tab and other misc fixes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,7 @@
 			"cwd": "${workspaceFolder}",
 			"env": {},
 			"args": [],
-			"showLog": true,
-			"output": "stderr"
+			"showLog": true
 		}
 	]
 }
